--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
 # action.yml
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: 'pike'
+description: 'Pike is for permissions!'
 inputs:
   who-to-greet:  # id of input
     description: 'Who to greet'
     required: true
-    default: 'World'
+    default: 'Frank'
 outputs:
   time: # id of output
     description: 'The time we greeted you'
