--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  pike_is_for_permissions:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
       - name: Hello world action step
         id: hello
-        uses: actions/hello-world-docker-actionv2
+        uses: actions/action-pike@latest
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
