--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,9 @@
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  workflow_dispatch:
+  repository_dispatch:
 
 jobs:
   pike_is_for_permissions:
