--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: JamesWoolfenden/action-pike@v0.1.1
+        uses: JamesWoolfenden/action-pike@latest
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
