--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,13 @@ jobs:
         id: version
         uses: JamesWoolfenden/action-pike@latest
         with:
-          action: version
+          verb: version
       - name: Scan
         id: scan
         uses: JamesWoolfenden/action-pike@latest
         with:
           directory: 'test'
-          action: scan
+          verb: scan
 
 
       # Use the output from the `hello` step
