--- a/action.yml
+++ b/action.yml
@@ -18,13 +18,15 @@ inputs:
   init:  
     description: 'Run Terraform init to download modules'     
   output:  
-    description: 'Output types e.g. json terraform (default: "terraform")'      
+    description: 'Output types e.g. json terraform'    
+  write:
+    description: 'Flag to write policy to file'   
 outputs:
   time: 
     description: 'The time we greeted you'
 runs:
   using: 'docker'
-  image: 'docker://jameswoolfenden/pike:v0.2.15'
+  image: 'docker://jameswoolfenden/pike:v0.2.16'
   args:
     - ${{ inputs.file }}
     - ${{ inputs.directory }}
